função levantar a mão aplicada
Co-authored-by: Pedro <garcia.lucas@aluno.unb.br>
Co-authored-by: Ingrid <ingridcarvalhoisc30@gmail.com>
Co-authored-by: Lorenzo <lorenzodavinci@hotmail.com>

--- a/public/main.css
+++ b/public/main.css
@@ -88,3 +88,25 @@ div#videos > video {
     display: block;
     margin: 1em;
 }
+
+
+.video-container {
+    position: relative;
+    display: inline-block;
+}
+
+#handEmoji {
+    position: absolute;
+    bottom: 10px; 
+    right: 10px;  
+    font-size: 3rem; 
+    display: none;
+}
+
+#handEmojiRemote {
+    position: absolute;
+    bottom: 10px; 
+    right: 10px; 
+    font-size: 3rem; 
+    display: none; 
+}
