Inclusão da funcionalidade de mutar som
Co-authored: laispa <lais3722@gmail.com>
Co-authored: Lorenzo <lorenzodavinci@hotmail.com>
Co-authored: AlefMemTav <garcia.lucas@aluno.unb.br>

--- a/public/main.css
+++ b/public/main.css
@@ -110,3 +110,21 @@ div#videos > video {
     font-size: 3rem; 
     display: none; 
 }
+
+#muteEmoji {
+    position: absolute;
+    bottom: 10px; 
+    left: 10px;  
+    font-size: 3rem; 
+    display: none;
+}
+
+#muteEmojiRemote {
+    position: absolute;
+    bottom: 10px; 
+    left: 10px;  
+    font-size: 3rem; 
+    display: none;
+}
+
+
